--- a/index.html
+++ b/index.html
@@ -11,32 +11,23 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="js/libs/jquery/jquery.js" type="text/javascript"></script>
+        <script src="js/node_modules/rsvp/dist/rsvp.js"></script>
+
         <!-- getting ecmascript 6 working ! -->
-        <script src="js/bin/traceur.js" type="text/javascript"></script>
-        <script src="js/bin/bootstrap.js" type="text/javascript"></script>
-        <!-- <script src="js/Outils.js" type="text/javascript"></script> -->
-        <!-- <script src="js/Test.js" type="text/javascript"></script>
-        <!-- <script src="js/frontend.js" type="text/javascript"></script> -->
+        <!-- <script src="js/bin/traceur.js" type="text/javascript"></script> -->
+        <!-- <script src="js/bin/bootstrap.js" type="text/javascript"></script> -->
+        <script src="js/Outils.js" type="text/javascript"></script> 
+        <script src="js/Test.js" type="text/javascript"></script>
+        <script src="js/frontend.js" type="text/javascript"></script>
     </head>
 
     <body>
 
-        <div id="display">
 
-        </div>
+        <div id="display"></div>
+        
 
-        <script type="module">
-     const GEEK_NAME = "k33g";
-const GEEK_NUMBER = 42;
- 
-function giveMeAGeek() {
-  const GEEK_NAME = "geek" + GEEK_NUMBER;
-  return GEEK_NAME;
-}
- 
-console.log(giveMeAGeek());
-console.log(GEEK_NAME);
-        </script>
+
 
     </body>
 </html>
