--- a/index.html
+++ b/index.html
@@ -10,24 +10,33 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <script src="js/libs/jquery/jquery.js" type="text/javascript"></script>
         <script src="js/node_modules/rsvp/dist/rsvp.js"></script>
+
+        <script src="js/Outils.js" type="text/javascript"></script> 
+        <script src="gf_98ncX1/gf_98ncX1.js" type="text/javascript"></script>
 
         <!-- getting ecmascript 6 working ! -->
         <!-- <script src="js/bin/traceur.js" type="text/javascript"></script> -->
         <!-- <script src="js/bin/bootstrap.js" type="text/javascript"></script> -->
-        <script src="js/Outils.js" type="text/javascript"></script> 
+
+
         <script src="js/Test.js" type="text/javascript"></script>
         <script src="js/frontend.js" type="text/javascript"></script>
     </head>
 
     <body>
 
-
         <div id="display"></div>
         
-
-
+        <div
+            class="fb-like"
+            data-share="true"
+            data-width="450"
+            data-show-faces="true">
+        </div>
 
     </body>
+
 </html>
