Revert "Adding a lot of differencies"
This reverts commit e53c64db401f20ca43e784c151e5a6f5f11e406c.

--- a/myNewFunction1.html
+++ b/myNewFunction1.html
@@ -12,9 +12,6 @@ and open the template in the editor.
     </head>
     <body>
         <div>TODO write content</div>
-        adding a lot of differencies
-        if i make a ot of changes
-       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce consequat ac justo eu molestie. Aenean nulla tortor, maximus sed efficitur eget, scelerisque at nisi. Sed consequat, nunc ut faucibus sollicitudin, arcu ante sodales urna, vel pretium leo libero vitae erat. Mauris eu orci hendrerit, varius mi vitae, posuere eros. Aliquam consectetur sapien tellus, eleifend suscipit mauris euismod sed. Mauris eget consequat turpis. Nam ut lorem quis ante vestibulum gravida et at turpis. Phasellus porta turpis enim, id feugiat mauris volutpat vel. Nam quis vulputate eros. Nunc justo nulla, lobortis sed aliquam eget, fringilla at ante. Praesent feugiat, ligula ac imperdiet lobortis, sapien tellus facilisis purus, ac semper ipsum mauris ut massa. Suspendisse tempus nibh sapien, quis eleifend tellus fringilla sit amet. Cras quis est nec felis cursus efficitur ac ut leo. Aliquam in ligula nibh. Sed aliquet viverra nisi eu dignissim. 
-        
+        adding differencies
     </body>
 </html>
